--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,3 +4,57 @@
 body {
   background-color: rgb(238, 231, 231);
 }
+section {
+  margin-bottom: 30px;
+}
+.main-container {
+  text-align: center;
+}
+.main-header {
+  margin-bottom: 0px;
+}
+.extra-main-header {
+  margin-top: 5px;
+}
+.gallery {
+  /* background-color: aquamarine; */
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 800px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+  justify-content: flex-start;
+}
+.photo-card {
+  display: flex;
+  flex-direction: column;
+  max-width: calc((100% - 15px * 6) / 3);
+  margin: 15px;
+  justify-content: center;
+  align-items: center;
+}
+.photo-card img {
+  display: block;
+  margin: 15px;
+  max-width: 100%;
+  height: auto;
+}
+.stats {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 100%;
+}
+.stats-item {
+  display: flex;
+  flex-direction: column;
+}
+.material-icons {
+  display: inline-block;
+}
+.button-load-more {
+  background-color: aqua;
+  margin-bottom: 20px;
+}
